--- a/style.css
+++ b/style.css
@@ -33,3 +33,8 @@ a {
     padding-bottom: 0.1em;
     border-bottom: 1px solid var(--link);
 }
+
+blockquote {
+    background: var(--scroll);
+    padding: 1px 15px;
+}
