--- a/style.css
+++ b/style.css
@@ -1,56 +1,238 @@
-:root {
-    --text: #f8f9fa;
-    --line: #424464;
-    --background: #181819;
-    --highlight: #8faafd;
-    --link: #fbff00;
-    --scroll: #2a2b39;
-}
-
-html,
-body {
-    position: relative;
-    overflow-x: hidden;
-    -webkit-text-size-adjust: none;
-    background-color: var(--background);
-}
-
-body {
+html {
     font-family: 'Public Sans', system-ui, sans-serif;
-    color: var(--text);
-    font-size: 16px;
-    line-height: 28px;
-}
-
-main {
-    margin: 0 auto 2em auto;
-    max-width: 500px;
 }
 
 a {
-    color: var(--text);
+    color: black;
     text-decoration: none;
-    padding-bottom: 0.1em;
-    border-bottom: 1px solid var(--link);
+    border-bottom: solid 2px gold;
+    padding: 0;
 }
 
-blockquote {
-    background: var(--scroll);
-    padding: 1px 15px;
+a:visited {
+    color: black;
+}
+
+a:hover,
+a:active {
+    color: gold;
+}
+
+a.image-link,
+a.image-link:visited,
+a.image-link:hover,
+a.image-link:active {
+    text-decoration: none;
+    border: none;
+    padding: 0;
+}
+
+h1 {
+    margin-bottom: 0.3em;
+    line-height: 1.2em;
+}
+
+body {
+    line-height: 1.5em;
+}
+
+.clearfix {
+    clear: both;
+}
+
+.wrapper {
+    max-width: 800px;
+
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-top: 2em;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.columns {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+@media screen and (min-width: 575px) {
+    .wrapper {
+        margin: auto;
+        margin-top: 5em;
+    }
+
+    .columns {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .sidebar {
+        width: 30%;
+    }
+
+    .main {
+        width: 70%;
+    }
+
+    .menu {
+        flex-direction: column;
+    }
+}
+
+.sidebar header {
+    font-size: xx-large;
+}
+
+.main> :first-child {
+    margin-top: 0 !important;
+    margin-left: 0 !important;
+}
+
+.main> :last-child {
+    margin-bottom: 0 !important;
+    margin-right: 0 !important;
+}
+
+.menu .menu-item {
+    text-decoration: none;
+    margin: 0.2em;
+}
+
+.menu .menu-item.active {
+    font-weight: bold;
+    color: black;
+}
+
+.menu .menu-item.active a {
+    border-bottom: none;
+}
+
+.avatar {
+    width: 125px;
+    height: 125px;
+    float: left;
+    border-radius: 6px;
+    margin-bottom: 1em;
+    margin-right: 2em;
+    margin-top: 1em;
+}
+
+ul.values {
+    list-style-type: none;
+    padding-left: none;
+}
+
+ul.values li {
+    padding: 0.5em;
+}
+
+.posts tr td:first-child,
+.talks tr td:first-child,
+.podcasts tr td:first-child {
+    min-width: 100px;
+    font-weight: 200;
+    text-align: right;
+}
+
+.posts td.stars {
+    max-width: 1em;
+    padding: 0;
+}
+
+.posts,
+.talks,
+.podcats>tr,
+td {
+    padding: 10px;
+}
+
+.posts .post-star {
+    color: gol;
+}
+
+ul.misc-list {
+    padding-left: 0;
+}
+
+ul.misc-list li {
+    padding: 0.5em;
+}
+
+.meta {
+    margin-top: 0.3em;
+    font-weight: 200;
 }
 
 pre {
-    border-style: solid;
-    border-width: 1px 1px 1px 10px;
-    border-color: var(--link);
-    padding: 4px 4px 4px 10px;
-    background-color: var(--background);
-    margin-left: 20px;
-    margin-right: 0em;
-    overflow: auto;
+    background-color: #faffff;
+    border: 1px solid #ddd;
+    padding: 0.8em;
+    overflow: scroll;
+    border-radius: 6px;
+    line-height: 1.3em;
 }
 
-#posts {
-    display: flex;
-    flex-direction: column;
+pre::-webkit-scrollbar {
+    display: none;
+}
+
+ul,
+ol {
+    margin-left: 1.35em;
+}
+
+code {
+    border: 1px solid #ddd;
+    background-color: #faffff;
+    padding: 0 0.2em;
+}
+
+pre code {
+    border: none;
+}
+
+/* terminal */
+pre.terminal {
+    border: 1px solid #000;
+    background-color: #333;
+    color: #fff;
+}
+
+pre.terminal code {
+    background-color: #333;
+}
+
+blockquote {
+    font-style: italic;
+    padding-left: 10px;
+}
+
+.postfooter {
+    border-top: 1px solid;
+    margin-top: 3em;
+    font-style: italic;
+}
+
+.footer {
+    margin-top: 3em;
+    text-align: center;
+    color: grey;
+}
+
+.footer a {
+    color: grey;
+}
+
+.footer a:visited {
+    color: grey;
 }
